# dwa_ext_local_planner

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  dwa_ext_planner.yaml  lp_plugin.xml  package.xml
cfg/: DWAExtPlanner.cfg
config/: DWAExtPlanner.cfg  README.md  dwa_ext_planner.yaml
doc/html/: annotated.html  classDepth-members.html  classDepth.html  classdwa__ext__local__planner_1_1DWAExtPlanner-members.html  classdwa__ext__local__planner_1_1DWAExtPlanner.html  classdwa__ext__local__planner_1_1DWAExtPlannerROS-members.html  classdwa__ext__local__planner_1_1DWAExtPlannerROS.html  classdwa__ext__local__planner_1_1DWAExtPlannerROS__inherit__graph.map  classdwa__ext__local__planner_1_1DWAExtPlannerROS__inherit__graph.md5  classdwa__ext__local__planner_1_1TraversabilityCostFunction-members.html  classdwa__ext__local__planner_1_1TraversabilityCostFunction.html  classdwa__ext__local__planner_1_1TraversabilityCostFunction__coll__graph.md5  classdwa__ext__local__planner_1_1TraversabilityCostFunction__inherit__graph.map  classes.html  depth_8h_source.html  dir_42ccf4618be89db7f61bdbbb997f865e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9a945387c7fe6b7d27ce6eaf91c269b1.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_eb8ebeabf7f5c4e953545376842f49c2.html  dwa__ext__local__planner_8h_source.html  dwa__ext__local__planner__ros_8h_source.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.md5  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherits.html  md_README.html  minimal__local__planner_8h_source.html  pages.html  traversability__cost__function_8h_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  searchdata.js
include/depth_image/: depth.h
include/dwa_ext_local_planner/: dwa_ext_local_planner.h  dwa_ext_local_planner_ros.h  traversability_cost_function.h
models/: README.md
models/multimodal/: bins_midpoints.npy  multimodal.py
models/resnet18/: bins_midpoints.npy  resnet18.py  resnet18_classification.py
models/resnet18_velocity/: resnet18_velocity.py
rviz/: move_base.rviz
src/: depth.cpp  depth_test.cpp  dwa_ext_local_planner.cpp  dwa_ext_local_planner_ros.cpp  resnet18_classification.py  traversability_cost_function.cpp
